--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,3 +14,9 @@ jobs:
       - uses: actions/checkout@v3
       - name: demo workflow job
         run: echo This is a demo start workflow
+        
+      - name: Download artifact
+      - uses: actions/download-artifact@v2
+        with:
+         name: <name-of-artifact>
+         path: <path-to-download>
