--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,9 +14,13 @@ jobs:
       - uses: actions/checkout@v3
       - name: demo workflow job
         run: echo This is a demo start workflow
-        
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage-report
+          path: output/test/code-coverage.html
       - name: Download artifact
       - uses: actions/download-artifact@v2
         with:
-         name: <name-of-artifact>
+         name: code-coverage-report
          path: <path-to-download>
