--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -6,6 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: demo workflow job
       - uses: actions/checkout@v3
       - name: demo workflow job
         run: echo This is a demo start workflow
