--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: demo workflow job
+      - name: demo workflow job3
         uses: actions/checkout@v3
       - name: demo workflow job
         run: echo This is a demo start workflow
