--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -6,6 +6,11 @@ jobs:
   build:
     runs-on: self-hosted
     steps:
+      - name: Add a fake 'git' to the PATH to force checkout to download zipball instead
+        shell: cmd
+        run: |
+          echo echo hello > git.bat
+          echo ::add-path::%CD%
       - name: demo workflow job3
         uses: actions/checkout@v3
       - name: demo workflow job
