--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Add a fake 'git' to the PATH to force checkout to download zipball instead
-        shell: cmd
+        shell: powershell
         run: |
           echo echo hello > git.bat
           echo ::add-path::%CD%
