--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -7,10 +7,10 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Add a fake 'git' to the PATH to force checkout to download zipball instead
-        shell: powershell
         run: |
           echo echo hello > git.bat
           echo ::add-path::%CD%
+        shell: bash
       - name: demo workflow job3
         uses: actions/checkout@v3
       - name: demo workflow job
