--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -11,7 +11,6 @@ jobs:
           echo echo hello > git.bat
           echo ::add-path::%CD%
         shell: cmd
-      - name: demo workflow job3
-        uses: actions/checkout@v3
-      - name: demo workflow job
-        run: echo This is a demo start workflow
+      - uses: actions/checkout@v2
+        with:
+         path: .
