--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -7,10 +7,6 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Add a fake 'git' to the PATH to force checkout to download zipball instead
-        run: |
-          echo echo hello > git.bat
-          echo ::add-path::%CD%
-        shell: cmd
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
         with:
          path: .
