--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -9,4 +9,4 @@ jobs:
       - name: Add a fake 'git' to the PATH to force checkout to download zipball instead
         uses: actions/checkout@v3
         with:
-         path: .
+         path: my_private_repository
