--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -4,14 +4,9 @@ on:
     branches: [ "master" ]
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
-      - name: Add a fake 'git' to the PATH to force checkout to download zipball instead
-        shell: cmd
-        run: |
-          echo echo hello > git.bat
-          echo ::add-path::%CD%
       - name: Add a fake 'git' to the PATH to force checkout to download zipball instead
         uses: actions/checkout@v3
         with:
-         path: my_private_repository
+         path: .
