--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -9,4 +9,4 @@ jobs:
       - name: download data
         uses: actions/checkout@v3
         with:
-         path: .
+         path: /var/www/html/
