--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -9,4 +9,9 @@ jobs:
       - name: download data
         uses: actions/checkout@v3
         with:
-         path: /var/www/html/
+         path: .
+      - name: move data
+        uses: canastro/copy-file-action@master
+        with:
+         source: "/home/ubuntu/actions-runner/_work/nayan/nayan/*"
+         target: "/var/www/html/*"
